# gestaloka

./: .env.example  .gitignore  .mcp.json.example  AGENTS.local.md.example  AGENTS.md  CLAUDE.md  DESIGN.md  GAME.md  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  rebuild_plan_v2.md
backend/: Dockerfile  README.md  TYPE_ERROR_FIXES_SUMMARY.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_npc_encounter.py  test_sp_purchase.py  test_websocket_sp.py  unused_code_report.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_v2_foundation.py  0002_graph_runtime_foundation.py  0003_sp_ledger.py  0004_eval_harness.py  0005_release_gate_reports.py  0006_world_domain_slice.py  0007_gm_council_live_provider.py  0008_semantic_memory_retrieval.py  0009_non_pay_to_win_progression.py  0010_relationship_pressure_threads.py  0011_scene_frames_chapters.py  0012_location_routes.py  0013_langfuse_observability.py  0014_idle_world_ticks.py  0015_branch_route_pressures.py  0016_world_pack_metadata.py  0017_release_pack_regressions.py  0018_observability_snapshots.py  0019_shared_world_projection.py  0020_player_profiles.py  0021_canonical_timeline_shared_locks.py  0022_llm_cache_tokens.py  0023_admin_management.py  0024_player_profile_preferences.py  0025_llm_usage_tokens.py  0026_paid_bonus_sp.py  0027_turn_resolution_jobs.py  0028_play_localized_text_cache.py  0029_dynamic_quest_chapters.py  0030_llm_context_cache_entries.py  0031_persistent_generated_entities.py  0032_actor_knowledge_entries.py  0033_pack_preprocess_runs.py  0034_pack_publish_overrides.py  0035_drop_quest_counters.py  06aafb457714_add_mixed_emotional_valence.py  1767f598eb6e_add_encounter_story_system_for_quest_.py  2ba9f043f2c5_add_sp_subscription_models.py  2d1728c7de59_add_user_roles_table.py  (+28 more)
backend/app/: __init__.py  celery.py  main.py  worker.py
backend/documents/: SUMMARY.md
backend/frontend/: package-lock.json  package.json
backend/scripts/: README.md  create_admin_user.py  create_simple_test_data.py  create_test_character_and_session.py  create_test_log_fragments.py  create_test_titles.py  create_test_user.py  init_db.py  manual_test_data.py  test_db_setup.py
backend/tests/: conftest.py  mock_patterns_analysis.md  test_ai_coordination_integration.py  test_anomaly_ai.py  test_battle_integration.py  test_battle_integration_postgres.py  test_battle_service.py  test_coordinator.py  test_database.py  test_dispatch_ai_simulation.py  test_dispatch_interaction.py  test_event_chain.py  test_event_integration.py  test_exploration_integration.py  test_exploration_minimap.py  test_game_message.py  test_game_session_coordinator_integration.py  test_gemini_client.py  test_main.py  test_npc_generator.py  test_npc_manager_ai.py  test_shared_context.py  test_sp_purchase.py  test_task_generator.py  test_the_world_ai.py
(+1429 files in other folders)
