[project]
name = "gestaloka-v2-backend"
version = "0.1.0"
description = "GESTALOKA v2 backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "google-genai>=1.17.0",
    "httpx>=0.28.0",
    "nebula3-python>=3.8.2",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-exporter-prometheus>=0.49b0",
    "opentelemetry-sdk>=1.28.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.10.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
