[project]
name = "gestaloka-v2-backend"
version = "0.1.0"
description = "GESTALOKA v2 backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "nebula3-python>=3.8.3",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-exporter-prometheus>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
